--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="You">You</string>
     <string name="PleaseWait">Please Wait</string>
+    <string name="noData">Unable to load data</string>
+    <string name="setting">Setting</string>
 </resources>
